# build-your-own-sqlite

./: .gitignore  README.md  course-definition.yml  starter-repository-definitions.yml  sweep.yaml
.github/workflows/: test.yml
compiled_starters/c/: README.md
compiled_starters/clojure/: README.md
compiled_starters/cpp/: CMakeLists.txt  README.md  codecrafters.yml  your_program.sh
compiled_starters/csharp/: .gitignore  README.md  codecrafters-sqlite.csproj
dockerfiles/: c-23.Dockerfile  cpp-23.Dockerfile  deno-1.42.Dockerfile  dotnet-6.0.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile  gleam-1.0.Dockerfile  gleam-1.6.Dockerfile  go-1.16.Dockerfile  go-1.19.Dockerfile  go-1.21.Dockerfile  go-1.22.Dockerfile  java-21.Dockerfile  python-3.11.Dockerfile  python-3.12.Dockerfile  python-3.13.Dockerfile  python-3.8.Dockerfile  ruby-2.7.Dockerfile  ruby-3.3.Dockerfile  rust-1.43.Dockerfile  rust-1.54.Dockerfile  rust-1.62.Dockerfile  rust-1.68.Dockerfile  rust-1.70.Dockerfile  rust-1.76.Dockerfile  rust-1.77.Dockerfile  rust-1.96.Dockerfile  scala-3.3.5.Dockerfile  swift-5.7.Dockerfile  zig-0.11.Dockerfile  zig-0.12.Dockerfile  zig-0.16.Dockerfile
solutions/rust/01-dr6/code/: Cargo.toml  README.md  codecrafters.yml  your_program.sh
solutions/rust/01-dr6/code/.codecrafters/: compile.sh
solutions/rust/01-dr6/code/src/: main.rs
stage_descriptions/: base-01-dr6.md  base-02-ce0.md  base-03-sz4.md  base-04-nd9.md  base-05-az9.md  base-06-vc9.md  base-07-rf3.md  base-08-ws9.md  base-09-nz8.md
starter_templates/: codecrafters.yml
starter_templates/go/: db.go  (+4 more)
(+348 files in other folders)
